Modernize cmake usage a little bit
I haven't seen LINK_PRIVATE/LINK_PUBLIC in ages, they're deprecated in
favour of PRIVATE/PUBLIC, which exist since CMake 3.0 if I see
correctly. Also improve indentation.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -73,16 +73,16 @@ target_include_directories(
 )
 target_link_libraries(
     gammaray_common
-    LINK_PUBLIC
+  PUBLIC
     Qt::Core
-    LINK_PRIVATE
+  PRIVATE
     Qt::Network
     Qt::Gui
     Qt::GuiPrivate
 )
 target_link_libraries(
     gammaray_common
-    LINK_PRIVATE
+  PRIVATE
     gammaray_lz4
     gammaray_kitemmodels
     ${CMAKE_DL_LIBS}
