--- a/plugins/signalmonitor/CMakeLists.txt
+++ b/plugins/signalmonitor/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library(
     ${gammaray_signalmonitor_shared_srcs}
 )
 target_link_libraries(
-    gammaray_signalmonitor_shared LINK_PRIVATE gammaray_common
+    gammaray_signalmonitor_shared PRIVATE gammaray_common
 )
 set_target_properties(gammaray_signalmonitor_shared PROPERTIES POSITION_INDEPENDENT_CODE ON)
 target_compile_features(gammaray_signalmonitor_shared PUBLIC ${GAMMARAY_REQUIRED_CXX_FEATURES})
