--- a/3rdparty/kde/CMakeLists.txt
+++ b/3rdparty/kde/CMakeLists.txt
@@ -8,7 +8,7 @@ set(gammaray_kitemmodels_srcs
 
 add_library(gammaray_kitemmodels SHARED ${gammaray_kitemmodels_srcs})
 
-target_link_libraries(gammaray_kitemmodels LINK_PUBLIC Qt::Core)
+target_link_libraries(gammaray_kitemmodels PUBLIC Qt::Core)
 
 set_target_properties(gammaray_kitemmodels PROPERTIES
   ${GAMMARAY_DEFAULT_LIBRARY_PROPERTIES}
