--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -113,18 +113,18 @@ target_include_directories(
 
 target_link_libraries(
     gammaray_ui
-    LINK_PUBLIC
+  PUBLIC
     Qt::Core
     Qt::Gui
     Qt::Widgets
     gammaray_common
-    LINK_PRIVATE
+  PRIVATE
     gammaray_common_internal
     gammaray_kitemmodels
     Qt::WidgetsPrivate
 )
 if(TARGET KF${QtCore_VERSION_MAJOR}::SyntaxHighlighting)
-    target_link_libraries(gammaray_ui LINK_PRIVATE KF${QtCore_VERSION_MAJOR}::SyntaxHighlighting)
+    target_link_libraries(gammaray_ui PRIVATE KF${QtCore_VERSION_MAJOR}::SyntaxHighlighting)
 endif()
 
 set(gammaray_ui_internal_srcs
