--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,16 +11,21 @@ repos:
   - id: trailing-whitespace
   - id: end-of-file-fixer
   - id: check-added-large-files
+    args: ['--maxkb=1000']
   - id: check-case-conflict
+  - id: check-xml
   - id: check-yaml
     args: [--allow-multiple-documents]
   - id: check-json
+  - id: check-symlinks
+  - id: destroyed-symlinks
+  - id: check-executables-have-shebangs
 - repo: https://github.com/pre-commit/mirrors-clang-format
-  rev: v17.0.3
+  rev: v17.0.6
   hooks:
   - id: clang-format
 - repo: https://github.com/PyCQA/pylint
-  rev: v3.0.1
+  rev: v3.0.3
   hooks:
   - id: pylint
     exclude: ^(.cmake-format.py|conan/.*/conanfile.py)
